--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": ["next/core-web-vitals", "plugin:import/recommended", "plugin:import/typescript"],
+    "plugins": ["unused-imports", "import"],
+    "rules": {
+        "unused-imports/no-unused-imports-ts": "warn"
+    }
 }
