--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
         "@types/react": "18.2.15",
         "@types/react-dom": "18.2.7",
         "eslint": "8.45.0",
-        "eslint-config-next": "13.4.10",
-        "next": "13.4.10",
+        "eslint-config-next": "^0.2.4",
+        "next": "^14.2.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
+        "react-modal": "^3.16.1",
         "react-query": "^3.39.3",
         "typescript": "5.1.6"
     },
     "devDependencies": {
+        "@types/react-modal": "^3.16.3",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-unused-imports": "^2.0.0",
         "prettier": "^2.0.0"
